welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:6: error: ';' expected but 'def' found.
/def isFacingTrail():Boolean = {
 ^